--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
