--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next/font": "^13.0.6",
     "bootstrap": "^5.2.3",
+    "cookie": "^0.5.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
