--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "18.2.0",
+    "react-stars": "^2.2.5",
     "sass": "^1.57.0"
   }
 }
