--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
     "jose": "^4.11.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
