--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "cookie": "^0.5.0",
+    "deep-object-diff": "^1.1.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
