--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -20,6 +20,7 @@
     "jose": "^4.11.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "named-placeholders": "^1.1.3",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
