--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-simple-star-rating": "^5.1.7",
     "react-stars": "^2.2.5",
+    "react-toastify": "^9.1.2",
     "sass": "^1.57.0"
   }
 }
