--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-date-picker": "^9.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.2",
     "react-simple-star-rating": "^5.1.7",
     "react-stars": "^2.2.5",
     "react-toastify": "^9.1.2",
