--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.3",
     "named-placeholders": "^1.1.3",
     "next": "13.0.5",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
