--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.6",
+    "@react-pdf/renderer": "^3.1.9",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "cookie": "^0.5.0",
