--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -18,8 +18,10 @@
     "deep-object-diff": "^1.1.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "handlebars": "^4.7.7",
+    "jimp": "^0.22.8",
     "jose": "^4.11.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
