--- a/pocket-ctis/package.json
+++ b/pocket-ctis/package.json
@@ -18,6 +18,8 @@
     "deep-object-diff": "^1.1.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "handlebars": "^4.7.7",
